force-app/main/default/objects/Question_Line_Item__c/Question_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Question Line Item</label>
    <nameField>
        <displayFormat>QLI - {0000}</displayFormat>
        <label>Question Line Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>