force-app/main/default/objects/Question_Line_Item__c/fields/Answer_Type__c.field-meta.xml
<CustomField>
    <fullName>Answer_Type__c</fullName>
    <label>Answer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>