force-app/main/default/objects/Question_Line_Item__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>