force-app/main/default/objects/Question_Line_Item__c/fields/Question_Template__c.field-meta.xml
<CustomField>
    <fullName>Question_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Template</label>
    <referenceTo>Question_Template__c</referenceTo>
    <relationshipLabel>Question Line Items</relationshipLabel>
    <relationshipName>Question_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>